--- a/src/main/resources/cpe_client/main/Mock_Test.fxml
+++ b/src/main/resources/cpe_client/main/Mock_Test.fxml
@@ -33,6 +33,8 @@
 -->
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -40,6 +42,7 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -47,9 +50,9 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cpe_client.main.Main_MenuController">
+<VBox prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cpe_client.main.Mock_TestController">
   <children>
-    <MenuBar VBox.vgrow="NEVER">
+    <MenuBar prefWidth="903.0" VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
@@ -103,19 +106,49 @@
           </children>
         </AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
-          <content>
-            <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="430.0">
-              <children>
-                <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="View" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-              </children>
-            </AnchorPane>
-          </content>
+               <content>
+                  <Label alignment="CENTER" minWidth="45.0" prefHeight="45.0" prefWidth="92.0" style="&#10;" text="View" textAlignment="CENTER" wrapText="false">
+                     <font>
+                        <Font size="18.0" fx:id="x12" />
+                     </font>
+                     <textFill>
+                        <Color red="0.624" green="0.624" blue="0.624" fx:id="x22" />
+                     </textFill>
+                  </Label>
+               </content>
         </ScrollPane>
-        <AnchorPane>
-          <children>
-            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Details" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-          </children>
-        </AnchorPane>
+            <ScrollPane prefHeight="200.0" prefWidth="200.0">
+               <content>
+                  <Pane prefHeight="565.0" prefWidth="208.0">
+                     <children>
+                        <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" style="&#10;" text="Details" textAlignment="CENTER" wrapText="false">
+                           <font>
+                              <Font size="18.0" fx:id="x11" />
+                           </font>
+                           <textFill>
+                              <Color red="0.624" green="0.624" blue="0.624" fx:id="x21" />
+                           </textFill>
+                        </Label>
+                        <Label fx:id="timer" alignment="CENTER" layoutX="87.0" layoutY="38.0" prefHeight="34.0" prefWidth="114.0" text="timer" textAlignment="CENTER">
+                           <font>
+                              <Font size="23.0" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="troblemSelector" layoutX="1.0" layoutY="79.0" prefHeight="25.0" prefWidth="187.0" promptText="選擇題目" />
+                        <ComboBox fx:id="languageSelector" layoutX="1.0" layoutY="408.0" prefHeight="23.0" prefWidth="152.0" promptText="選擇語言" />
+                        <Button fx:id="submmitButton" layoutX="156.0" layoutY="408.0" mnemonicParsing="false" onMouseClicked="#onSubmitButtonClick" text="送出" />
+                        <TextField fx:id="inputBox" layoutY="146.0" prefHeight="115.0" prefWidth="208.0" promptText="輸入" />
+                        <TextField fx:id="outpuBox" alignment="TOP_LEFT" editable="false" layoutY="273.0" prefHeight="127.0" prefWidth="208.0" text="輸出" />
+                        <Label fx:id="judgeResult" layoutX="4.0" layoutY="448.0" prefHeight="74.0" prefWidth="165.0" text="judgeResult">
+                           <font>
+                              <Font size="28.0" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="testCaseSelector" layoutX="1.0" layoutY="110.0" prefHeight="23.0" prefWidth="188.0" promptText="選擇測資" />
+                     </children>
+                  </Pane>
+               </content>
+            </ScrollPane>
       </items>
     </SplitPane>
     <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
