--- a/src/main/resources/cpe_client/main/Mock_Test.fxml
+++ b/src/main/resources/cpe_client/main/Mock_Test.fxml
@@ -43,7 +43,6 @@
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -91,21 +90,9 @@
         </Menu>
       </menus>
     </MenuBar>
-    <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+    <SplitPane fx:id="splitPane" dividerPositions="0.2505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <items>
-        <AnchorPane>
-          <children>
-            <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Master" textAlignment="CENTER" wrapText="false">
-              <font>
-                <Font size="18.0" fx:id="x1" />
-              </font>
-              <textFill>
-                <Color red="0.624" green="0.624" blue="0.624" fx:id="x2" />
-              </textFill>
-            </Label>
-          </children>
-        </AnchorPane>
-        <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
+        <ScrollPane fx:id="codingPane" prefHeight="-1.0" prefWidth="-1.0">
                <content>
                   <Label alignment="CENTER" minWidth="45.0" prefHeight="45.0" prefWidth="92.0" style="&#10;" text="View" textAlignment="CENTER" wrapText="false">
                      <font>
@@ -117,7 +104,7 @@
                   </Label>
                </content>
         </ScrollPane>
-            <ScrollPane prefHeight="200.0" prefWidth="200.0">
+            <ScrollPane fx:id="othersPane" prefHeight="200.0" prefWidth="200.0">
                <content>
                   <Pane prefHeight="565.0" prefWidth="208.0">
                      <children>
@@ -134,7 +121,7 @@
                               <Font size="23.0" />
                            </font>
                         </Label>
-                        <ComboBox fx:id="troblemSelector" layoutX="1.0" layoutY="79.0" prefHeight="25.0" prefWidth="187.0" promptText="選擇題目" />
+                        <ComboBox fx:id="problemSelector" layoutX="1.0" layoutY="79.0" prefHeight="25.0" prefWidth="187.0" promptText="選擇題目" />
                         <ComboBox fx:id="languageSelector" layoutX="1.0" layoutY="408.0" prefHeight="23.0" prefWidth="152.0" promptText="選擇語言" />
                         <Button fx:id="submmitButton" layoutX="156.0" layoutY="408.0" mnemonicParsing="false" onMouseClicked="#onSubmitButtonClick" text="送出" />
                         <TextField fx:id="inputBox" layoutY="146.0" prefHeight="115.0" prefWidth="208.0" promptText="輸入" />
@@ -162,7 +149,7 @@
           </textFill>
         </Label>
         <Pane prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-        <Label font="$x3" maxWidth="-1.0" text="Right status" textFill="$x4" HBox.hgrow="NEVER" />
+            <Button fx:id="othersSwitch" mnemonicParsing="false" text="操作區開關" />
       </children>
       <padding>
         <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
