--- a/src/main/resources/cpe_client/main/Auto_Sign_Up.fxml
+++ b/src/main/resources/cpe_client/main/Auto_Sign_Up.fxml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#onbackButtonClick" prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cpe_client.main.Auto_Sign_UpController">
    <children>
-      <Label layoutX="410.0" layoutY="271.0" prefHeight="95.0" prefWidth="195.0" text="AutoSignUp">
+      <Label layoutX="14.0" layoutY="14.0" prefHeight="95.0" prefWidth="195.0" text="AutoSignUp">
          <font>
             <Font size="29.0" />
          </font>
       </Label>
+      <ComboBox fx:id="examLocationSelector" layoutX="155.0" layoutY="300.0" prefHeight="23.0" prefWidth="540.0" promptText="選擇考場" />
+      <Button fx:id="loginButton" layoutX="496.0" layoutY="411.0" mnemonicParsing="false" onMouseClicked="#onloginButtonClick" prefHeight="30.0" prefWidth="72.0" text="登入" />
+      <TextField fx:id="departmentTextField" layoutX="345.0" layoutY="207.0" />
+      <TextField fx:id="schoolTextField" layoutX="154.0" layoutY="207.0" />
+      <TextField fx:id="gradeTextField" layoutX="532.0" layoutY="207.0" />
+      <Label alignment="CENTER" layoutX="154.0" layoutY="181.0" prefHeight="23.0" prefWidth="159.0" text="學校" />
+      <Label alignment="CENTER" layoutX="345.0" layoutY="181.0" prefHeight="23.0" prefWidth="159.0" text="學系" />
+      <Label alignment="CENTER" layoutX="532.0" layoutY="181.0" prefHeight="23.0" prefWidth="159.0" text="年級" />
+      <Button fx:id="backButton" layoutX="277.0" layoutY="411.0" mnemonicParsing="false" onMouseClicked="#onbackButtonClick" prefHeight="30.0" prefWidth="72.0" text="返回" />
    </children>
 </AnchorPane>
